Fix. Align Text to Center

--- a/components/Sections/Benefits/KnowMore.module.css
+++ b/components/Sections/Benefits/KnowMore.module.css
@@ -14,3 +14,7 @@
   border-radius: 10px;
   cursor: pointer;
 }
+
+.text {
+  text-align: center;
+}
